[package]
name = "ddmesh-db-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql-client = "0.33.4"
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
ethers = "2.0"
secp256k1 = { version = "0.28.2", features = ["rand"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-async-std", "runtime-tokio"] }
hex = "0.4.3"
libsql = "0.2.0"
